--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^4.13.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.15.13",
     "auth0": "^3.3.0",
     "bcrypt": "^5.1.0",
