--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.15.13",
+    "@types/uuid4": "^2.0.0",
     "auth0": "^3.3.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
@@ -21,10 +22,12 @@
     "jsonwebtoken": "^9.0.0",
     "jwks-rsa": "^3.0.1",
     "jwt-decode": "^3.1.2",
+    "nanoid": "^4.0.2",
     "pm2": "^5.3.0",
     "ts-jest": "^29.1.0",
     "tsc-watch": "^6.0.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "uuid4": "^2.0.3"
   },
   "scripts": {
     "build": "tsc",
